Bases agregadas de HTML y Stylus

--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Spotify</title>
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-	<h1>Sfotipy</h1>
+	<header class="header">
+		
+	</header>
+	<section class="container">
+		<article class="song">
+			<figure class="image">
+				<img src="" alt="">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+	</section>
+
 </body>
 </html>
