Caja de Header agregado, Carpeta Img agregado

--- a/index.html
+++ b/index.html
@@ -2,17 +2,89 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Spotify</title>
 	<link rel="stylesheet" href="css/estilo.css">
+	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="header">
-		
+	<header class="header relative border-bottom">
+		<a href="" class="button-menu ">*</a>
+		<nav class="menu">
+			<ul class="list">
+				<li class="item"><a href="">Top Hits</a></li>
+				<li class="item"><a href="">Top Hits</a></li>
+				<li class="item"><a href="">Top Hits</a></li>
+				<li class="item"><a href="">Top Hits</a></li>
+				<li class="item"><a href="">Top Hits</a></li>
+				<li class="item"><a href="">Top Hits</a></li>
+			</ul>
+		</nav>
+		<div class="title">
+			<span>
+				Top Hits
+			</span>
+		</div>
 	</header>
 	<section class="container">
 		<article class="song">
 			<figure class="image">
-				<img src="" alt="">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
+			</figure>
+			<p class="name">
+				Esperare
+			</p>
+			<p class="autor">
+				Jesus Adrian Romero
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
 			</figure>
 			<p class="name">
 				Esperare
