--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<title>Spotify</title>
 	<link rel="stylesheet" href="css/estilo.css">
 	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header class="header relative border-bottom">
-		<a href="" class="button-menu ">*</a>
+		<a href="" class="button-menu icon-menu"></a>
 		<nav class="menu">
 			<ul class="list">
 				<li class="item"><a href="">Top Hits</a></li>
@@ -26,6 +26,44 @@
 			</span>
 		</div>
 	</header>
+	<section class="playing small center-block">
+		<figure class="image relative">
+			<img src="img/songs/tst-playing.jpg" width="320px" height="320px"alt="Creere Tercer Cielo">
+			<div class="actions padding right-text">
+				<a href="" class="action icon-add"></a>
+				<a href="" class="action icon-love"></a>
+				<a href="" class="action icon-share"></a>
+			</div>
+		</figure>
+		<div class="padding">
+			<div class="progress relative">
+				<span class="min">0:45</span>
+				<div class="total">
+					<div class="state relative">
+						<div class="circulo">
+							
+						</div>
+					</div>
+				</div>
+				<span class="max">4:05</span>
+			</div>
+			<div class="description center-text border-bottom">
+				<p class="name">
+					Creere
+				</p>
+				<p class="autor">
+					Tercer Cielo
+				</p>
+			</div>
+			<div class="play center-text padding-tb">
+				<a href="" class="action gray icon-prev"></a>
+				<a href="" class="action gray icon-play"></a>
+				<a href="" class="action gray icon-next"></a>
+				<a href="" class="action gray icon-random"></a>
+				<a href="" class="action gray icon-vol"></a>
+			</div>
+		</div>
+	</section>
 	<section class="container">
 		<article class="song">
 			<figure class="image">
