--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<title>Spotify</title>
-	<link rel="stylesheet" href="css/estilo.css">
 	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<header class="header relative border-bottom">
@@ -16,7 +16,7 @@
 				</figure>
 				<div class="user float-right">
 					<figure class="avatar round float-left">
-						<img src="img/avatares/josue.jpg" 
+						<img src="img/avatares/josue.jpg"
 						width="38px" height="38px"
 						alt="@Josueechandiaasto">
 					</figure>
@@ -26,7 +26,7 @@
 				</div>
 				<div class="search float-right">
 					<form action="" class="relative">
-						<span class="icon-search form-icon left"></span>
+						<span class="icon-search form-icon left" id="search"></span>
 						<input type="text" placeholder="@Josueechandiaasto" class="input">
 						<span class="form-icon close-icon right">x</span>
 					</form>
@@ -67,7 +67,7 @@
 					<div class="total">
 						<div class="state relative">
 							<div class="circulo">
-								
+
 							</div>
 						</div>
 					</div>
@@ -82,11 +82,11 @@
 					</p>
 				</div>
 				<div class="play center-text padding-tb">
-					<a href="" class="action gray icon-prev"></a>
-					<a href="" class="action gray icon-play"></a>
-					<a href="" class="action gray icon-next"></a>
+					<a href="" class="action gray icon-prev" id="prev"></a>
+					<a href="" class="action gray icon-play" id="play"></a>
+					<a href="" class="action gray icon-next" id="next"></a>
 					<a href="" class="action gray icon-random"></a>
-					<a href="" class="action gray icon-vol"></a>
+					<a href="" class="action gray icon-vol" id="vol"></a>
 				</div>
 			</div>
 		</div>
@@ -161,139 +161,27 @@
 			</ul>
 		</div>
 	</section>
-	<section class="container">
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
-		<article class="song">
-			<figure class="image">
-				<img src="img/songs/tst.jpg" alt="Esperare Jesus Adrian Romero" width="128px" heigth="128px">
-			</figure>
-			<p class="name">
-				Esperare
-			</p>
-			<p class="autor">
-				Jesus Adrian Romero
-			</p>
-		</article>
+	<section class="container" id="list">
+		<script type="html/x-handlebars" id="song-tmpl">
+			{{#each songs}}
+			<article class="song" data-id="{{@index}}">
+				<figure class="image">
+					<img src="{{img}}" width="128" height="128" title="{{artist}}">
+				</figure>
+				<p class="name">
+					{{name}}
+				</p>
+				<p class="autor">
+					{{artist}}
+				</p>
+			</article>
+			{{/each}}
+		</script>
 	</section>
+
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="js/lib/handlebars.js"></script>
+	<script src="js/lib/observable.js"></script>
+	<script src="js/player-mvc.js"></script>
 </body>
 </html>
